# openchat-news

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  PLAN_v1.1.md  README.md  README_EASY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  migrate_v1_1.sql  pyproject.toml  schema.sql  test_parser.py
backend/app/: config.py  main.py
backend/app/models/: models.py
backend/app/routers/: auth.py  generate.py  rooms.py  summaries.py  upload.py
backend/app/services/: gemini.py  parser.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/daily/: layout.tsx  page.tsx
frontend/app/daily/[date]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/monthly/[yearMonth]/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/weekly/[yearWeek]/: page.tsx
frontend/components/content/: DigestView.tsx
frontend/components/generate/: GeneratePanel.tsx
frontend/components/layout/: MobileHeader.tsx  Sidebar.tsx
frontend/components/rooms/: RoomSettings.tsx
frontend/components/upload/: UploadModal.tsx
frontend/lib/: api-server.ts  api.ts
